--- a/views/user/orders.hbs
+++ b/views/user/orders.hbs
@@ -1,7 +1,8 @@
 <section>
-    <div class="container">
-        <div class="row mt-4">
-            <table class="table mt-5">
+    <div class="container ">
+        <div class="row mt-4 ">
+                            <div class="table-responsive">
+            <table class="table mt-5 ">
                 <thead>
                     <tr>
                         <th scope="col">Date</th>
@@ -33,7 +34,9 @@
                     </tr>
                     {{/each}}
                 </tbody>
+                
             </table>
+            </div>
         </div>
     </div>
 </section>
