--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -400,6 +400,16 @@
   --h2-font: 3.5rem;
   --p-font: 1rem;
 }
+.btn{
+  max-height: 50px;
+  width: 55%;
+  border: none;
+  outline: none;
+  background-color: #000000;
+  color: #f0f0f0;
+  font-weight: 400;
+  border-radius: 15px;
+}
 .btn1{
   height: 30px;
   width: 55%;
