--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -14,7 +14,7 @@
                                     <div class="cart-item-image">
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
-                                    <div class="cart-item-details mt-2">
+                                    <div class="cart-item-details">
                                         <h6>{{this.product.name}}</h6>
                                     </div>
                                     <div class="cart-item-quantity d-flex align-items-center">
@@ -26,7 +26,7 @@
                                             <i class="fas fa-plus"></i>
                                         </button>
                                     </div>
-                                    <div class="cart-item-price mb-2 mt-2">
+                                    <div class="cart-item-price">
                                         <h5>{{this.product.price}}</h5>
                                     </div>
                                     <div class="cart-item-remove">
@@ -122,7 +122,6 @@
     }
 </style>
 
-
 <script>
     function changeQuantity(cartId,prodId,userId,count){
         let quantity=parseInt(document.getElementById(prodId).innerHTML)
@@ -142,7 +141,8 @@
             location.reload()
             }else{
                 document.getElementById(prodId).innerHTML=quantity+count
-                document.getElementById("total").innerHTML=response.total         
+                document.getElementById("total").innerHTML=response.total   
+                location.reload()      
             }
         }
     })
