--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -151,7 +151,7 @@
             
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class=" col-5  btn btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
+              class=" col-5  btn1 btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
               Add to cart
             </button>
             <p class="mb-0 pr-1 "> ₹ {{this.price}}</p>
@@ -223,7 +223,7 @@
           <div class="   d-flex justify-content-between align-items-center  mb-3" >
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class=" col-5 btn btn-dark btn-sm m-2 px-1 py-2" >
+              class=" col-5 btn1 btn-dark btn-sm m-2 px-1 py-2" >
               Add to cart
             </button>
             <p class="mb-0 pr-1"> ₹ {{this.price}}</p>
@@ -400,7 +400,7 @@
   --h2-font: 3.5rem;
   --p-font: 1rem;
 }
-.btn{
+.btn1{
   max-height: 50px;
   width: 55%;
   border: none;
@@ -410,16 +410,7 @@
   font-weight: 400;
   border-radius: 15px;
 }
-.btn1{
-  height: 30px;
-  width: 55%;
-  border: none;
-  outline: none;
-  background-color: #000000;
-  color: #f0f0f0;
-  font-weight: 400;
-  border-radius: 15px;
-}
+
 .btn1:hover{
   background-color:#616060;
   transition: 0.5s;
