--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -204,7 +204,7 @@
   <a class="nav-link dropdown-toggle black"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     {{#if user}}
     <i class="ri-account-circle-line text-dark"></i>
-      <span class="username" style="font-size:medium">{{user.name}}</span>
+      <span class="username mr-2" style="font-size:medium ">{{user.name}}</span>
     {{else}}
       <i class="ri-user-line"></i>
     {{/if}}
