--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -43,7 +43,7 @@
                         </div>
                         <div class="text-center mt-3">
                              {{#if products.length}}
-                            <a href="/place-order" class="btn btn-primary"><i class="fa fa-shopping-cart"></i> Checkout</a>
+                            <a href="/place-order" class="btn btn-primary mb-2"><i class="fa fa-shopping-cart"></i> Checkout</a>
                             <a href="/" class="btn btn-secondary"><i class="fa fa-arrow-left"></i> Continue shopping</a>
                             {{/if}}
                         </div>
