--- a/views/admin/cancelled-orders.hbs
+++ b/views/admin/cancelled-orders.hbs
@@ -1,10 +1,11 @@
 <!-- HTML Table -->
+ <main class="mt-5 pt-2">
 <section>
     <div class="container">
-        <div class="row mt-4">
+        <div class="row mt-2">
                       <h1 class="h4  mb-4"> CANCEL ORDERS</h1>
             <div class="table-responsive">
-                <table class="table mt-5">
+                <table class="table mt-2">
                     <thead>
                         <tr>
                             <th scope="col">Date</th>
@@ -14,7 +15,6 @@
                             <th scope="col">Amount</th>
                             <th scope="col">Payment</th>
                             <th>Status</th>
-                            <th>Action</th> <!-- Added Action column for button -->
                         </tr>
                     </thead>
                     <tbody>
@@ -37,6 +37,7 @@
         </div>
     </div>
 </section>
+</main>
 <style>
     .container {
     padding-top: 1rem;
