--- a/views/admin/delivered-orders.hbs
+++ b/views/admin/delivered-orders.hbs
@@ -1,10 +1,11 @@
 <!-- HTML Table -->
+ <main class="mt-5 pt-3">
 <section>
     <div class="container">
-        <div class="row mt-4">
+        <div class="row mt-2">
                       <h1 class="h4  mb-4"> DELIVERED ORDERS</h1>
             <div class="table-responsive">
-                <table class="table mt-5">
+                <table class="table mt-2">
                     <thead>
                         <tr>
                             <th scope="col">Date</th>
@@ -35,6 +36,7 @@
         </div>
     </div>
 </section>
+</main>
 <style>
     .container {
     padding-top: 1rem;
