--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -159,9 +159,7 @@
       top: -10px;
       right: -5px;
     }
-    .mr-2{
-      padding-right: 3rem;
-    }
+    
   }
   
   </style>
@@ -197,7 +195,7 @@
       </ul>
        </div>
 
-      <div class=" col-5 col-lg-2 col-md-2   d-flex align-items-center  px-1  ">
+      <div class=" col-5 col-lg-2 col-md-2   d-flex align-items-center  mr-5  ">
         <a href="#"><i class="ri-search-line " style="padding-right: 0.2rem; padding-left:1rem"></i></a>
         <a href="/cart">
           <i class="ri-shopping-cart-line" style="padding-left: 0.4rem;"></i>
@@ -207,7 +205,7 @@
   <a class="nav-link dropdown-toggle black"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     {{#if user}}
     <i class="ri-account-circle-line text-dark"></i>
-      <span class="username mr-2" style="font-size:medium ">{{user.name}}</span>
+      <span class="username " style="font-size:medium ">{{user.name}}</span>
     {{else}}
       <i class="ri-user-line"></i>
     {{/if}}
