updation in layout

--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -150,10 +150,10 @@
             
             <button 
               onClick="{{#if ../user}}addToCart('{{this._id}}'){{else}}alert('Please login'){{/if}}" 
-              class=" col-5 pl-2 btn1 btn-dark btn-sm d-inline  px-1 py-2 "  >
+              class=" col-5  btn1 btn-dark btn-sm d-inline m-2 px-1 py-2 "  >
               Add to cart
             </button>
-            <p class="mb-0 pr-2 "> ₹ {{this.price}}</p>
+            <p class="mb-0 pr-1 "> ₹ {{this.price}}</p>
           </div>
         </div>
         
