updation in layout

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="type">Type:</label>
+                        <label for="type">operating system:</label>
                         <input type="text" class="form-control" name="type">
                     </div>
 
@@ -35,7 +35,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="material">Material:</label>
+                        <label for="material">suitable for:</label>
                         <input type="text" class="form-control" name="material">
                     </div>
 
