updation in layout

--- a/views/user/view-all-products.hbs
+++ b/views/user/view-all-products.hbs
@@ -149,7 +149,9 @@
       <div class="col-lg-3 col-md-3 col-6 mb-2">
         <div class="card border-0 h-100 d-flex flex-column">
           <div class="card-body">
+             <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
             <img class="img-fluid" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
+         </a>
           </div>
           <!-- Product name with fixed height using Bootstrap -->
           <h6 class=" h6 text-center mb-2 " style="min-height: 2rem;">
