--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -135,11 +135,16 @@
       </div>
     </div>
     <div class="row">
+      
       {{#each TrendingProduct}}
+      
       <div class="col-lg-3 col-md-3 col-6 mb-2 product-card">
+        
         <div class="card border-0 h-100 d-flex flex-column">
           <div class="card-body">
+             <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
             <img class="img-fluid" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
+          </a>
           </div>
           <!-- Product name with fixed height using Bootstrap -->
           <h6 class=" h6 text-center m-1 mb-2" style="max-height: 8rem;">
@@ -158,6 +163,7 @@
         </div>
         
       </div>
+      </a>
       {{/each}}
     </div>
 
@@ -211,7 +217,9 @@
       <div class="col-lg-3 col-md-3 col-6 mb-5 product-card">
         <div class="card border-0 h-100 d-flex flex-column">
           <div class="card-body">
+             <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
             <img class="img-fluid me-2" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
+         </a>
           </div>
           <!-- Product name with fixed height using Bootstrap -->
           <h6 class=" h6 text-center mb-2" style="min-height: 2rem;">
