updation in layout

--- a/views/admin/add-product.hbs
+++ b/views/admin/add-product.hbs
@@ -25,7 +25,7 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="type">operating system:</label>
+                        <label for="type">warranty:</label>
                         <input type="text" class="form-control" name="type">
                     </div>
 
