--- a/views/user/view-each-product.hbs
+++ b/views/user/view-each-product.hbs
@@ -29,11 +29,11 @@
           </div>
           <p class="" style="font-size:0.95rem;">{{product.description}}</p>
           <div class="row">
-            <dt class="col-3">Type:</dt>
+            <dt class="col-3">warranty:</dt>
             <dd class="col-9">{{product.type}}</dd>
             <dt class="col-3">Color</dt>
             <dd class="col-9">{{product.color}}</dd>
-            <dt class="col-3">Material</dt>
+            <dt class="col-3">suitable for</dt>
             <dd class="col-9">{{product.material}}</dd>
             <dt class="col-3">Brand</dt>
             <dd class="col-9">{{product.brand}}</dd>
