updation in spacing

--- a/views/admin/view-trending-products.hbs
+++ b/views/admin/view-trending-products.hbs
@@ -1,7 +1,7 @@
 <section class="product">
   <div class="container py-5 mt-3 me-5">
     <div class="row">
-      {{#each Bestsellers}}
+      {{#each TrendingProduct}}
       <div class="col-lg-3 col-md-3  mb-2 product-card">
                 <a href="/view-each-product/{{this._id}}" style="text-decoration: none; color: inherit;">
         <div class="card border-0 h-100 d-flex flex-column">
