--- a/views/admin/view-trending-products.hbs
+++ b/views/admin/view-trending-products.hbs
@@ -9,7 +9,7 @@
             <img class="img-fluid" src="/images/{{this._id}}.png" style="max-width: 100%; height: 200px; object-fit:contain">
           </div>
           <!-- Product name with fixed height using Bootstrap -->
-          <h6 class=" h6 text-center mb-2" style="min-height: 2rem;">
+          <h6 class=" h6 text-center m-1 mb-2" style="max-height: 8rem;">
             {{this.name}}
           </h6>
           <!-- Button and price aligned using Bootstrap -->
