--- a/views/admin/view-adminproducts.hbs
+++ b/views/admin/view-adminproducts.hbs
@@ -29,7 +29,7 @@
               <td>{{this.description}}</td>
               <td><img style="width:50px;height:50px" src='/images/{{this._id}}.png' alt=''></td>
               <td>
-                <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary">Edit</a>
+                <a href="/admin/edit-product/{{this._id}}" class="btn btn-primary mb-2">Edit</a>
                 <a href="/admin/delete-product/{{this._id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete {{this.name}}?')">Delete</a>
               </td>
             </tr>
