--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -127,9 +127,9 @@
     </div>
   </section> --}}
 
- <section class="product">
+ <section class="product mt-3">
   <div class="container py-2">
-    <div class="row py-5">
+    <div class="row py-1">
       <div class="col-lg-5 m-auto text-center">
         <h1 class="h2">Trending Products</h1>
       </div>
