--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -127,7 +127,7 @@
     </div>
   </section> --}}
 
- <section class="product mt-5">
+ <section class="product py-5">
   <div class="container py-2">
     <div class="row py-1">
       <div class="col-lg-5 m-auto text-center">
