--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -2,7 +2,7 @@
 <body>
 
   {{!-- home --}}
-  <div id="demo" class="carousel slide" data-ride="carousel" data-interval="4000">
+  <div id="demo" class="carousel slide mb-4" data-ride="carousel" data-interval="4000">
 
     <!-- Indicators -->
     <ul class="carousel-indicators">
