--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -307,7 +307,7 @@
           <h6 class="text-uppercase  mb-3 font-weight-bold">
             Volt-Cart
           </h6>
-          <p class="text-start" style="width: 100%; margin-bottom: 5px;">
+          <p class="text-start m-2" style="width: 100%; margin-bottom: 5px;">
             Volt-Cart offers a seamless online shopping experience with a wide range of products, secure payments, and fast delivery. Discover great deals and enjoy hassle-free shopping tailored to your needs.
           </p>
         </div>
