--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -131,3 +131,54 @@
 }
 
 </style>
+
+<script>
+    function changeQuantity(cartId,prodId,userId,count){
+        let quantity=parseInt(document.getElementById(prodId).innerHTML)
+        count=parseInt(count)
+    $.ajax({
+        url:'/change-product-quantity',
+        data:{
+            user:userId,
+            cart:cartId,
+            product:prodId,
+            count:count,
+            quantity:quantity
+        },
+        method:'post',
+        success:(response)=>{
+            if(response.removeProduct){
+            location.reload()
+            }else{
+                document.getElementById(prodId).innerHTML=quantity+count
+                document.getElementById("total").innerHTML=response.total   
+                location.reload()      
+            }
+        }
+    })
+    }
+    function removeProduct(cartId,prodId,count){
+        let quantity=parseInt(document.getElementById(prodId).innerHTML)
+        count=parseInt(count)
+    $.ajax({
+        url:'/remove-product',
+        data:{
+            cart:cartId,
+            product:prodId,
+            count:count,
+            quantity:quantity
+        },
+        method:'post',
+        success:(response)=>{
+            if(response.removeProduct){
+            ("Product Removed from cart")
+            location.reload()
+            
+            }
+        }
+    })
+    }
+
+</script>
+
+
