updation in layout

--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -15,7 +15,7 @@
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
                                     <div class="cart-item-details flex-grow-1 mx-2">
-                                        <h6 class="h6">{{this.product.name}}</h6>
+                                        <h6 class="h6" style="width: 2rem;">{{this.product.name}}</h6>
                                     </div>
                                     <div class="cart-item-quantity d-flex align-items-center">
                                         <button class="cart-item-count btn btn-sm btn-white border border-secondary" onClick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">
