--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -7,15 +7,15 @@
                     <div class="card-body">
                         <h5 class="card-title">Items in your cart</h5>
                         <hr>
-                        <div class="cart-items mx-2">
+                        <div class="cart-items mx-3">
                             {{#if products.length}}
                                 {{#each products}}
                                 <div class="cart-item d-flex align-items-center justify-content-between py-2">
                                     <div class="cart-item-image">
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
-                                    <div class="cart-item-details flex-grow-1 mx-2">
-                                        <h6 class="h6" style="width: 12rem;">{{this.product.name}}</h6>
+                                    <div class="cart-item-details flex-grow-1 ">
+                                        <h6 class="h6">{{this.product.name}}</h6>
                                     </div>
                                     <div class="cart-item-quantity d-flex align-items-center">
                                         <button class="cart-item-count btn btn-sm btn-white border border-secondary" onClick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">
@@ -23,7 +23,7 @@
                                         </button>
                                         <span id="{{this.product._id}}" class="mx-2">{{this.quantity}}</span>
                                         <button class="cart-item-count btn btn-sm btn-white border border-secondary" onclick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user}}',1)">
-                                            <i class="fas fa-plus  "></i>
+                                            <i class="fas fa-plus mr-1 "></i>
                                         </button>
                                     </div>
                                     <div class="cart-item-price mr-2 ml-1">
