--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -7,10 +7,10 @@
                     <div class="card-body">
                         <h5 class="card-title">Items in your cart</h5>
                         <hr>
-                        <div class="cart-items mx-3">
+                        <div class="cart-items ">
                             {{#if products.length}}
                                 {{#each products}}
-                                <div class="cart-item d-flex align-items-center justify-content-between py-2">
+                                <div class="cart-item d-flex align-items-center justify-content-between py-2 mx-3">
                                     <div class="cart-item-image">
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
