--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -11,13 +11,13 @@
                             {{#if products.length}}
                                 {{#each products}}
                                 <div class="cart-item d-flex align-items-center justify-content-between py-2 mx-3">
-                                    <div class="cart-item-image col-2 col-lg-2">
+                                    <div class="cart-item-image col-lg-2">
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
-                                    <div class="cart-item-details flex-grow-1 col-4 col-lg-4 ">
+                                    <div class="cart-item-details flex-grow-1  col-lg-4 ">
                                         <h6 class="h6">{{this.product.name}}</h6>
                                     </div>
-                                    <div class="cart-item-quantity d-flex align-items-center col-2 col-lg-2">
+                                    <div class="cart-item-quantity d-flex align-items-center  col-lg-2">
                                         <button class="cart-item-count btn btn-sm btn-white border border-secondary" onClick="changeQuantity('{{this._id}}','{{this.product._id}}','{{../user}}',-1)">
                                             <i class="fas fa-minus"></i>
                                         </button>
@@ -26,10 +26,10 @@
                                             <i class="fas fa-plus mr-1 "></i>
                                         </button>
                                     </div>
-                                    <div class="cart-item-price mr-2 ml-1 col-2 col-lg-2">
+                                    <div class="cart-item-price mr-2 ml-1  col-lg-2">
                                         <h5>{{this.product.price}}</h5>
                                     </div>
-                                    <div class="cart-item-remove col-2 col-lg-2">
+                                    <div class="cart-item-remove  col-lg-2">
                                         <button class="btn btn-sm btn-danger" onClick="removeProduct('{{this._id}}','{{this.product._id}}')">
                                             <i class="fa fa-trash"></i>
                                         </button>
