--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -26,7 +26,7 @@
                                             <i class="fas fa-plus mr-1 "></i>
                                         </button>
                                     </div>
-                                    <div class="cart-item-price mr-2 ml-1  col-lg-2">
+                                    <div class="cart-item-price mr-2 ml-1 mb-1 col-lg-2">
                                         <h5>{{this.product.price}}</h5>
                                     </div>
                                     <div class="cart-item-remove  col-lg-2">
