--- a/views/user/cart.hbs
+++ b/views/user/cart.hbs
@@ -11,7 +11,7 @@
                             {{#if products.length}}
                                 {{#each products}}
                                 <div class="cart-item d-flex align-items-center justify-content-between py-2 mx-3">
-                                    <div class="cart-item-image col-lg-2">
+                                    <div class="cart-item-image col-lg-2 mb-2">
                                         <img style="width: 70px; height:70px" src="/images/{{this.product._id}}.png" alt="{{this.product.name}}">
                                     </div>
                                     <div class="cart-item-details flex-grow-1  col-lg-4 ">
