updation in layout

--- a/views/user/view-products.hbs
+++ b/views/user/view-products.hbs
@@ -157,7 +157,7 @@
               class=" col-6  btn btn-dark btn-sm d-inline m-1 ">
               Add to cart
             </button>
-            <p class="mb-0 mr-1"> ₹ {{this.price}}</p>
+            <p class="mb-0 "> ₹ {{this.price}}</p>
           </div>
         </div>
         
@@ -231,7 +231,7 @@
               class=" col-6  btn btn-dark btn-sm d-inline m-1 ">
               Add to cart
             </button>
-            <p class="mb-0 mr-1"> ₹ {{this.price}}</p>
+            <p class="mb-0 "> ₹ {{this.price}}</p>
           </div>
         </div>
         
